# chat-server

./: Cargo.toml  Readme.md  docker-compose.yml  feed_user.sql
migrations/: 00001_chatuser.sql  00002_chats.sql  00003_messages.sql  00004_seen.sql  00005_receiver_message.sql  00006_unseen_message.sql
src/: lib.rs  main.rs  router.rs
src/database/: chat.rs  db.rs  user.rs
src/models/: chat.rs  message.rs  users.rs
src/socketcontroller/: controller.rs
src/utility/: response.rs
