[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[examples]
client = "examples/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = {version = "0.7.5", features=["ws"]}
tokio = {version= "1.37.0", features = ["full"]}
sqlx = {version="0.6", features=["postgres","runtime-tokio-rustls"]}
serde = "1.0.202"

