[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[examples]
client = "examples/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = {version = "0.7.5", features=["ws"]}
tokio = {version= "1.37.0", features = ["full"]}
sqlx = {version="0.6", features=["postgres","runtime-tokio-rustls","macros","uuid","chrono"]}
serde = "1.0.202"
serde_json = "1.0"
dotenv = "0.15.0"
uuid = {version="1.8.0", features=["serde"]}
tower-http = { version = "0.5.2", features = ["cors"] }
http = "1.0"
socketioxide={version="0.13.1",features=["state"]}
chrono={version="0.4.38", features = ["serde"]}
